# remote-control

./: .gitignore  Cargo.toml  NOTICE  README.md  go.mod  package-lock.json  package.json  playwright.config.js
.github/workflows/: ci.yml  release.yml
cmd/rc-safari-smoke/: main.go
cmd/remote-control/: main.go
crates/rc-safari-smoke/: Cargo.toml
crates/rc-safari-smoke/src/: main.rs
crates/remote-control/: Cargo.toml
crates/remote-control-core/: Cargo.toml
crates/remote-control-core/src/: app.rs  auth.rs  config.rs  flow.rs  lib.rs  power_macos.rs  runtime_state.rs  safari_smoke.rs  server.rs  session.rs  tmux.rs  ttydiscover.rs  tunnel_cloudflare.rs  websocket_support.rs
crates/remote-control/src/: main.rs
docs/: production-hardening-plan.md
internal/app/: app.go  app_test.go  commands_test.go  e2e_test.go
internal/auth/: token.go  token_test.go
internal/config/: settings.go  settings_test.go
internal/httpui/: httpui.go
internal/httpui/static/: index.html
internal/power/macos/: caffeinate.go
internal/runtime/: state.go  state_test.go
internal/safarismoke/: runner.go  runner_test.go
internal/session/: terminal.go  terminal_test.go
internal/tmux/: tmux.go  tmux_test.go
internal/ttydiscover/: discover.go  discover_test.go
internal/tunnel/cloudflare/: manager.go  manager_test.go
internal/websocket/: flow.go  flow_test.go  server.go  server_integration_test.go  server_test.go
scripts/: remote_control_smoke.sh
tests/browser/: ui.e2e.spec.js
