[package]
name = "remote-control-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
base64 = "0.22.1"
chrono = { version = "0.4.42", features = ["clock", "serde"] }
nix = { version = "0.30.1", features = ["signal", "term"] }
portable-pty = "0.9.0"
rand = "0.9.2"
regex = "1.12.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sha2 = "0.10.9"
tempfile = "3.23.0"
toml = "0.9.8"
url = "2.5.7"
