[package]
name = "remote-control-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
axum = { version = "0.8.6", features = ["ws"] }
base64 = "0.22.1"
chrono = { version = "0.4.42", features = ["clock", "serde"] }
futures-util = "0.3.31"
nix = { version = "0.30.1", features = ["signal", "term"] }
portable-pty = "0.9.0"
rand = "0.9.2"
regex = "1.12.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sha2 = "0.10.9"
tempfile = "3.23.0"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread", "signal", "net", "sync", "time"] }
toml = "0.9.8"
url = "2.5.7"
